Fix cut off text in Safari
**Why**: The bottoms of certain letters was being cut off in for input boxes.

--- a/app/assets/stylesheets/variables/_web.scss
+++ b/app/assets/stylesheets/variables/_web.scss
@@ -46,7 +46,7 @@ $space-6: 5rem !default;
 $form-field-font-size: 1rem !default;
 $form-field-font-size-sm: 1.25rem !default;
 $form-field-height: 3rem !default;
-$form-field-padding-y: .75rem !default;
+$form-field-padding-y: .5rem !default;
 $form-field-padding-x: 1rem !default;
 
 $button-font-size: 1rem !default;
